force-app/main/default/objects/Financial_Goal__c/fields/Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value__c</fullName>
    <label>Actual Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>