force-app/main/default/objects/Financial_Goal__c/fields/Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Goals</relationshipLabel>
    <relationshipName>Financial_Goals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>