force-app/main/default/objects/Financial_Goal__c/fields/Target_Period__c.field-meta.xml
<CustomField>
    <fullName>Target_Period__c</fullName>
    <label>Target Period(Unused)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Term</fullName>
            </value>
            <value>
                <fullName>Medium Term</fullName>
            </value>
            <value>
                <fullName>Long Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>