force-app/main/default/objects/Financial_Goal__c/fields/Target_Period_New__c.field-meta.xml
<CustomField>
    <fullName>Target_Period_New__c</fullName>
    <formula>IF(Target_Date__c - DATEVALUE(CreatedDate) &gt; 365*3, &quot;ระยะยาว&quot;,

IF(AND((Target_Date__c - DATEVALUE(CreatedDate) &gt;= 365),(Target_Date__c - DATEVALUE(CreatedDate) &lt;= 365*3)), &quot;ระยะกลาง&quot;, &quot;ระยะสั้น&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Period</label>
    <type>Text</type>
</CustomField>