force-app/main/default/objects/Financial_Goal__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Purpose</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Home Purchase</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>New Business Acquisition</fullName>
            </value>
            <value>
                <fullName>New Services</fullName>
            </value>
            <value>
                <fullName>Large Purchase</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>