force-app/main/default/objects/Financial_Goal__c/validationRules/RM_is_not_owner_of_the_customer.validationRule-meta.xml
<ValidationRule>
    <fullName>RM_is_not_owner_of_the_customer</fullName>
    <active>true</active>
    <errorConditionFormula>( $Profile.Name != &apos;Retail Integration API Only&apos;)
&amp;&amp;
NOT(CONTAINS( $Profile.Name,&apos;Admin&apos;))
&amp;&amp;
$User.Id &lt;&gt;  Primary_Owner__r.RTL_Wealth_RM__r.Id</errorConditionFormula>
    <errorMessage>Only the RM owner of the customer can create or update the financial goals.</errorMessage>
</ValidationRule>